--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-na_emailer.egg-info
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.git/
+.gitignore
+.idea/
+*.md
+config/
